TeamDebugger's destructor must not assume that any of its heap allocations have succeeded, since Init() can terminate early in a number of instances. Resolves #8096.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@43208 a95241bf-73f2-0310-859d-f6bbb57e9c96